@@ -1,4 +1,6 @@
- -- VERSION 0.40 --
+2013-02-07: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/Verifier.pm (add_signature): call fetch_public_key() iff
+   the signature passes a validity check
 
 2013-02-06: Jason Long <jlong@messiah.edu>
  * t/corpus/good_83176.txt: add new email to test suite; this email contains
